deployment-hc/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bgd-hc
  name: bgd-hc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd-hc
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd-hc
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: bgd-hc
        resources: {}
---
