deployment-hc/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  creationTimestamp: null
  labels:
    app: bgd-hc
  name: bgd-hc
  namespace: bgd-hc
spec:
  host: bgd.hc.rohbas11-in.container-crush-01-4044f3a4e314f4bcb433696c70d13be9-0000.che01.containers.appdomain.cloud
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: bgd-hc
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
